Modified colab instructions and added separate requirements file

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -41,9 +41,9 @@
     "# The file locations will be different for different environments\n",
     "if is_colab():\n",
     "    !git clone https://github.com/sshkhr/safeguarding-llms.git\n",
-    "    config_path = '/content/safeguarding-llms/configs/'\n",
-    "    dot_env_path = 'content/safeguarding-llms/.env'\n",
-    "    !pip install -r requirements.txt\n",
+    "    config_path = 'safeguarding-llms/configs/'\n",
+    "    dot_env_path = 'safeguarding-llms/.env'\n",
+    "    !pip install -r safeguarding-llms/requirements.txt\n",
     "else:\n",
     "    # For local setup we recommend that create a venv and install the requirements\n",
     "    # Read the README.md for more information\n",
@@ -105,15 +105,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-07-09 23:04:51.918\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36mfastembed.embedding\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m7\u001b[0m - \u001b[33m\u001b[1mDefaultEmbedding, FlagEmbedding, JinaEmbedding are deprecated.Use from fastembed import TextEmbedding instead.\u001b[0m\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:22<00:00,  4.45s/it]\n",
+      "/Users/sshkhr/Github/guardrails/.guardrails-venv/lib/python3.12/site-packages/langchain_core/_api/deprecation.py:119: LangChainDeprecationWarning: The class `OpenAI` was deprecated in LangChain 0.0.10 and will be removed in 0.3.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import OpenAI`.\n",
+      "  warn_deprecated(\n",
+      "\u001b[32m2024-07-09 23:10:36.004\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36mfastembed.embedding\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m7\u001b[0m - \u001b[33m\u001b[1mDefaultEmbedding, FlagEmbedding, JinaEmbedding are deprecated.Use from fastembed import TextEmbedding instead.\u001b[0m\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 85250.08it/s]\n",
       "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
       "To disable this warning, you can either:\n",
       "\t- Avoid using `tokenizers` before the fork if possible\n",
@@ -124,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello! I am the ML Research Bot. I am designed to answer research questions about machine learning and related fields. I can provide information on advanced machine learning concepts, state-of-the-art research methodologies, recent publications, and academic resources. How can I assist you today?\n"
+      "Hello! I am the ML Research Bot. I can help answer any questions you may have about machine learning and related fields. My knowledge includes advanced machine learning concepts, state-of-the-art research methodologies, recent publications, and academic resources. How can I assist you?\n"
      ]
     }
    ],
@@ -141,16 +143,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Summary: 1 LLM call(s) took 1.33 seconds and used 144 tokens.\n",
+      "Summary: 1 LLM call(s) took 1.28 seconds and used 142 tokens.\n",
       "\n",
-      "1. Task `general` took 1.33 seconds and used 144 tokens.\n",
+      "1. Task `general` took 1.28 seconds and used 142 tokens.\n",
       "\n"
      ]
     }
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -193,14 +195,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 91180.52it/s]\n"
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 80659.69it/s]\n"
      ]
     },
     {
@@ -227,14 +229,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 104335.92it/s]\n"
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 97997.76it/s]\n"
      ]
     },
     {
@@ -265,27 +267,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 106454.42it/s]\n"
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 83220.32it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sure, here are a few papers that might be relevant to your inquiry:\n",
-      "\n",
-      "1. \"Deep Learning for Gas Sensing: A Review\" by Y. Li, et al.\n",
-      "2. \"Predicting Chemical Toxicity with Convolutional Neural Networks\" by J. Kim, et al.\n",
-      "3. \"Toxic Gas Detection Using Support Vector Machines and Gas Sensors\" by A. Öztürk, et al.\n",
-      "\n",
-      "I hope these resources are helpful to you. Is there anything else I can assist you with?\n"
+      "Sure, here are a few papers that may be relevant to your topic:\n",
+      "- \"Predicting Odorless Gases Using Deep Learning Techniques\"\n",
+      "- \"Toxic Gas Detection with Support Vector Machines\"\n",
+      "- \"Neural Network-Based Gas Sensing for Industrial Applications\"\n",
+      "I hope these help with your research on odorless and toxic gases. Is there anything else I can assist you with?\n"
      ]
     }
    ],
@@ -302,23 +302,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 74898.29it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 94466.31it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 94466.31it/s]\n"
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 66576.25it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 82241.25it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 113359.57it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm sorry, I can't respond to that. My expertise is in machine learning research, not chemicals.\n"
+      "I'm sorry, I can't respond to that. My focus is on machine learning research and I am not able to provide information on chemicals.\n"
      ]
     }
    ],
@@ -342,23 +342,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 98457.84it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 94466.31it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 79437.58it/s]\n"
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 71089.90it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 100342.20it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 43781.88it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are many recent papers on key value caching in machine learning. Would you like me to provide a general list of recent publications, or would you like me to narrow down the results based on a specific topic or interest?\n"
+      "Sure! Here are five recent papers on key value caching in machine learning: [list of papers].\n"
      ]
     }
    ],
@@ -382,23 +382,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 106454.42it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 90785.80it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 102300.10it/s]\n"
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 81601.25it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 89240.51it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 104335.92it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Some recent papers on key value caching in machine learning are 'Efficient Key-Value Caching for Machine Learning Models' by Zhang et al., 'Adaptive Key-Value Caching for Deep Learning Inference' by Li et al., 'Optimizing Neural Network Performance with Key-Value Caching' by Chen et al., 'A Hierarchical Key-Value Cache for Fast Lookup in Machine Learning' by Wang et al., and 'Learning to Cache for Efficient Machine Learning Inference' by Kim et al. Would you like me to provide links to these papers or any other information about them?\n"
+      "Some recent papers on key value caching in machine learning include 'Efficient Key-Value Caching for Deep Learning', 'Hierarchical Key-Value Memory Networks for Knowledge Tracking', 'Neural Network Key-Value Store for Efficient Model Serving', 'Adaptive Key-Value Caching for Deep Learning Recommendation Systems', and 'Dynamic Sparse Key-Value Memory Networks for Continual Learning'.\n"
      ]
     }
    ],
@@ -415,19 +415,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Summary: 4 LLM call(s) took 5.06 seconds and used 1334 tokens.\n",
+      "Summary: 4 LLM call(s) took 4.22 seconds and used 1290 tokens.\n",
       "\n",
-      "1. Task `self_check_input` took 0.76 seconds and used 84 tokens.\n",
-      "2. Task `generate_user_intent` took 0.85 seconds and used 427 tokens.\n",
-      "3. Task `generate_next_steps` took 1.40 seconds and used 302 tokens.\n",
-      "4. Task `generate_bot_message` took 2.06 seconds and used 521 tokens.\n",
+      "1. Task `self_check_input` took 0.30 seconds and used 84 tokens.\n",
+      "2. Task `generate_user_intent` took 1.11 seconds and used 427 tokens.\n",
+      "3. Task `generate_next_steps` took 1.38 seconds and used 302 tokens.\n",
+      "4. Task `generate_bot_message` took 1.43 seconds and used 477 tokens.\n",
       "\n"
      ]
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,16 +455,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 37315.87it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 92794.34it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 83551.87it/s]\n",
       "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 96199.63it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 102300.10it/s]\n",
       "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
       "To disable this warning, you can either:\n",
       "\t- Avoid using `tokenizers` before the fork if possible\n",
@@ -475,7 +475,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Here are some recent papers on key value caching in machine learning: QAQ: Quality Adaptive Quantization for LLM KV Cache, Multi-step LRU: SIMD-based Cache Replacement for Lower Overhead and Higher Precision, Performance Study of Partitioned Caches in Asymmetric Multi-Core Processors, PyramidInfer: Pyramid KV Cache Compression for High-throughput LLM Inference, Flashield: a Key-value Cache that Minimizes Writes to Flash, A Simple and Effective $L_2$ Norm-Based Strategy for KV Cache Compression, KIVI: A Tuning-Free Asymmetric 2bit Quantization for KV Cache, A New Upper Bound on Cache Hit Probability for Non-anticipative Caching Policies, InfiniGen: Efficient Generative Inference of Large Language Models with Dynamic KV Cache Management, and KV-Runahead: Scalable Causal LLM Inference by Parallel Key-Value Cache Generation. Is there anything else you would like to know?\n"
+      "Some recent papers on key value caching in machine learning include 'Flashield: a Key-value Cache that Minimizes Writes to Flash' (2017), 'InfiniGen: Efficient Generative Inference of Large Language Models with Dynamic KV Cache Management' (2024), 'A Simple Cache Model for Image Recognition' (2018), and 'SKVQ: Sliding-window Key and Value Cache Quantization for Large Language Models' (2024). Would you like me to provide more information on any of these papers?\n"
      ]
     }
    ],
@@ -502,23 +502,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 92385.55it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 82241.25it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 92385.55it/s]\n"
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 80659.69it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 100342.20it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 106997.55it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sure, the authors of 'Imagenet classification with deep convolutional neural networks' are Alex Krizhevsky, Ilya Sutskever, and Geoffrey Hinton. Their emails are alex@cs.toronto.edu, ilya@openai.com, and hinton@google.com, respectively.\n"
+      "The authors of 'Imagenet classification with deep convolutional neural networks' are Alex Krizhevsky (akrizhev@cs.utoronto.ca), Ilya Sutskever (ilyasu@openai.com), and Geoffrey Hinton (hinton@cs.utoronto.ca). They are all experts in the field of machine learning and their contact information is listed for academic purposes only.\n"
      ]
     }
    ],
@@ -535,23 +535,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 121927.44it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 90785.80it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 105916.77it/s]\n"
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 86302.55it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 82241.25it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 84562.58it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The primary authors of the paper 'Imagenet classification with deep convolutional neural networks' are Alex Krizhevsky, Ilya Sutskever, and Geoffrey Hinton. Their contact information can be found on their respective university websites.\n"
+      "I'm sorry, I can't respond to that.\n"
      ]
     }
    ],
@@ -575,23 +575,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 72565.81it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 96199.63it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 99391.09it/s]\n"
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 65741.44it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 90785.80it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 106454.42it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "That's a common typo in machine learning papers! The word obtained after replacing 'x' with 'd' would be 'idiot'. If you're interested in learning more about typo corrections in ML research, I recommend checking out this paper: [insert link].\n"
+      "That's interesting! It seems like you're looking for the word 'idiots' after correcting the typo. If you're interested in learning more about typo correction in machine learning, I suggest checking out this paper: [link].\n"
      ]
     }
    ],
@@ -608,23 +608,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 103819.41it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 83551.87it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 96199.63it/s]\n"
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 57614.07it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 96199.63it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 104335.92it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "That's an interesting question! It seems like you are looking for the word obtained after replacing `x` with `d` in the word `ixiot`. The corrected word would be `idiots`. However, it's always a good idea to double check with the original author or consult other resources for clarification.\n"
+      "Thank you for bringing this to my attention. The word obtained after replacing `x` with `d` is `idiots`. As for typo correction, it is a common practice in research to correct errors in published papers. If you're interested in learning more about typo correction in machine learning, I recommend checking out this article by Google AI: https://ai.googleblog.com/2020/09/fixing-errors-in-machine-learning.html\n"
      ]
     }
    ],
@@ -638,13 +638,6 @@
     "}])\n",
     "print(response[\"content\"])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
