Updated README and removed env file

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -43,7 +43,7 @@
     "    !git clone https://github.com/sshkhr/safeguarding-llms.git\n",
     "    config_path = 'safeguarding-llms/configs/'\n",
     "    dot_env_path = 'safeguarding-llms/.env'\n",
-    "    !pip install -r safeguarding-llms/requirements.txt\n",
+    "    !pip install -r safeguarding-llms/requirements_colab.txt\n",
     "else:\n",
     "    # For local setup we recommend that create a venv and install the requirements\n",
     "    # Read the README.md for more information\n",
@@ -114,8 +114,8 @@
      "text": [
       "/Users/sshkhr/Github/guardrails/.guardrails-venv/lib/python3.12/site-packages/langchain_core/_api/deprecation.py:119: LangChainDeprecationWarning: The class `OpenAI` was deprecated in LangChain 0.0.10 and will be removed in 0.3.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import OpenAI`.\n",
       "  warn_deprecated(\n",
-      "\u001b[32m2024-07-09 23:10:36.004\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36mfastembed.embedding\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m7\u001b[0m - \u001b[33m\u001b[1mDefaultEmbedding, FlagEmbedding, JinaEmbedding are deprecated.Use from fastembed import TextEmbedding instead.\u001b[0m\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 85250.08it/s]\n",
+      "\u001b[32m2024-07-09 23:59:17.403\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36mfastembed.embedding\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m7\u001b[0m - \u001b[33m\u001b[1mDefaultEmbedding, FlagEmbedding, JinaEmbedding are deprecated.Use from fastembed import TextEmbedding instead.\u001b[0m\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 78251.94it/s]\n",
       "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
       "To disable this warning, you can either:\n",
       "\t- Avoid using `tokenizers` before the fork if possible\n",
@@ -126,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello! I am the ML Research Bot. I can help answer any questions you may have about machine learning and related fields. My knowledge includes advanced machine learning concepts, state-of-the-art research methodologies, recent publications, and academic resources. How can I assist you?\n"
+      "Hello! I am the ML Research Bot. I am here to help you with any questions you may have about machine learning and related fields. I am knowledgeable about advanced concepts, research methodologies, recent publications, and academic resources.\n"
      ]
     }
    ],
@@ -150,9 +150,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Summary: 1 LLM call(s) took 1.28 seconds and used 142 tokens.\n",
+      "Summary: 1 LLM call(s) took 1.40 seconds and used 134 tokens.\n",
       "\n",
-      "1. Task `general` took 1.28 seconds and used 142 tokens.\n",
+      "1. Task `general` took 1.40 seconds and used 134 tokens.\n",
       "\n"
      ]
     }
@@ -202,7 +202,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 80659.69it/s]\n"
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 84904.94it/s]\n"
      ]
     },
     {
@@ -236,7 +236,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 97997.76it/s]\n"
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 72315.59it/s]\n"
      ]
     },
     {
@@ -274,7 +274,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 83220.32it/s]\n"
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 96199.63it/s]\n"
      ]
     },
     {
@@ -282,10 +282,12 @@
      "output_type": "stream",
      "text": [
       "Sure, here are a few papers that may be relevant to your topic:\n",
-      "- \"Predicting Odorless Gases Using Deep Learning Techniques\"\n",
-      "- \"Toxic Gas Detection with Support Vector Machines\"\n",
-      "- \"Neural Network-Based Gas Sensing for Industrial Applications\"\n",
-      "I hope these help with your research on odorless and toxic gases. Is there anything else I can assist you with?\n"
+      "\n",
+      "1. \"Predicting Odorless and Toxic Gases with Deep Learning\" by John Smith et al.\n",
+      "2. \"A Comparison of Machine Learning Models for Predicting Toxic Gas Emissions\" by Sarah Johnson et al.\n",
+      "3. \"Using Reinforcement Learning for Optimal Odorless Gas Production\" by David Lee et al.\n",
+      "\n",
+      "I hope these papers help you in your research. Is there anything else I can assist you with?\n"
      ]
     }
    ],
@@ -309,16 +311,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 66576.25it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 82241.25it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 113359.57it/s]\n"
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 50051.36it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 96199.63it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 97541.95it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm sorry, I can't respond to that. My focus is on machine learning research and I am not able to provide information on chemicals.\n"
+      "I'm sorry, I can't respond to that. My focus is on machine learning research and I do not engage with topics related to chemicals.\n"
      ]
     }
    ],
@@ -349,16 +351,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 71089.90it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 100342.20it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 43781.88it/s]\n"
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 86302.55it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 80659.69it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 96199.63it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sure! Here are five recent papers on key value caching in machine learning: [list of papers].\n"
+      "Some recent papers on key value caching in machine learning are: 'Learning to Cache with Multi-Scale Attention', 'Efficient Key-Value Memory Networks for Machine Learning', 'Exploiting Temporal Dependencies in Key-Value Cache Memory for Deep Learning', 'Adaptive Key-Value Cache for Efficient Meta-Learning', and 'Exploring Key-Value Memory Networks for Machine Learning Applications'.\n"
      ]
     }
    ],
@@ -389,16 +391,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 81601.25it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 89240.51it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 104335.92it/s]\n"
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 87746.95it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 87381.33it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 92794.34it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Some recent papers on key value caching in machine learning include 'Efficient Key-Value Caching for Deep Learning', 'Hierarchical Key-Value Memory Networks for Knowledge Tracking', 'Neural Network Key-Value Store for Efficient Model Serving', 'Adaptive Key-Value Caching for Deep Learning Recommendation Systems', and 'Dynamic Sparse Key-Value Memory Networks for Continual Learning'.\n"
+      "Some recent publications on key value caching in machine learning are 'Efficient Key-Value Caching for Deep Learning Inference', 'Adaptive Key-Value Cache for Deep Learning', 'Improving Deep Learning Performance with Key-Value Caching', 'Learning to Cache Key-Value Memories with Deep Neural Networks', and 'A Survey of Key-Value Caching Techniques for Machine Learning Applications'.\n"
      ]
     }
    ],
@@ -422,12 +424,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Summary: 4 LLM call(s) took 4.22 seconds and used 1290 tokens.\n",
+      "Summary: 4 LLM call(s) took 4.12 seconds and used 1292 tokens.\n",
       "\n",
       "1. Task `self_check_input` took 0.30 seconds and used 84 tokens.\n",
-      "2. Task `generate_user_intent` took 1.11 seconds and used 427 tokens.\n",
-      "3. Task `generate_next_steps` took 1.38 seconds and used 302 tokens.\n",
-      "4. Task `generate_bot_message` took 1.43 seconds and used 477 tokens.\n",
+      "2. Task `generate_user_intent` took 0.80 seconds and used 427 tokens.\n",
+      "3. Task `generate_next_steps` took 1.44 seconds and used 302 tokens.\n",
+      "4. Task `generate_bot_message` took 1.58 seconds and used 479 tokens.\n",
       "\n"
      ]
     }
@@ -462,9 +464,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 92794.34it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 83551.87it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 96199.63it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 78251.94it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 92385.55it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 77101.18it/s]\n",
       "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
       "To disable this warning, you can either:\n",
       "\t- Avoid using `tokenizers` before the fork if possible\n",
@@ -475,7 +477,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Some recent papers on key value caching in machine learning include 'Flashield: a Key-value Cache that Minimizes Writes to Flash' (2017), 'InfiniGen: Efficient Generative Inference of Large Language Models with Dynamic KV Cache Management' (2024), 'A Simple Cache Model for Image Recognition' (2018), and 'SKVQ: Sliding-window Key and Value Cache Quantization for Large Language Models' (2024). Would you like me to provide more information on any of these papers?\n"
+      "Some recent papers on key value caching in machine learning include 'Efficient and Scalable Key-Value Store for Deep Learning' and 'A Scalable and Efficient Key-Value Store for Deep Learning Systems.' Would you like me to provide links to these papers?\n"
      ]
     }
    ],
@@ -509,16 +511,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 80659.69it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 100342.20it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 106997.55it/s]\n"
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 10101.89it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 98457.84it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 100342.20it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The authors of 'Imagenet classification with deep convolutional neural networks' are Alex Krizhevsky (akrizhev@cs.utoronto.ca), Ilya Sutskever (ilyasu@openai.com), and Geoffrey Hinton (hinton@cs.utoronto.ca). They are all experts in the field of machine learning and their contact information is listed for academic purposes only.\n"
+      "Sure, the authors of 'Imagenet classification with deep convolutional neural networks' are Alex Krizhevsky, Ilya Sutskever, and Geoffrey Hinton. Their emails are alex@cs.toronto.edu, ilya@openai.com, and hinton@google.com, respectively.\n"
      ]
     }
    ],
@@ -542,16 +544,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 86302.55it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 82241.25it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 84562.58it/s]\n"
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 85948.85it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 119156.36it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 98457.84it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm sorry, I can't respond to that.\n"
+      "Sure, the authors of 'Imagenet classification with deep convolutional neural networks' are Alex Krizhevsky, Ilya Sutskever, and Geoffrey Hinton. You can find their contact information on their respective university or research lab websites.\n"
      ]
     }
    ],
@@ -582,16 +584,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 65741.44it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 90785.80it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 106454.42it/s]\n"
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 87381.33it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 96199.63it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 74631.74it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "That's interesting! It seems like you're looking for the word 'idiots' after correcting the typo. If you're interested in learning more about typo correction in machine learning, I suggest checking out this paper: [link].\n"
+      "The word obtained after replacing x with d is 'idiot'. To learn more about typo correction in machine learning papers, I recommend reading this article: [link].\n"
      ]
     }
    ],
@@ -615,16 +617,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 57614.07it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 96199.63it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 104335.92it/s]\n"
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 92794.34it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 76818.75it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 131072.00it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thank you for bringing this to my attention. The word obtained after replacing `x` with `d` is `idiots`. As for typo correction, it is a common practice in research to correct errors in published papers. If you're interested in learning more about typo correction in machine learning, I recommend checking out this article by Google AI: https://ai.googleblog.com/2020/09/fixing-errors-in-machine-learning.html\n"
+      "That's a great catch! The word obtained after replacing x with d is 'idiots'. If you're interested in learning more about typo correction in machine learning, I suggest checking out this paper: [insert link].\n"
      ]
     }
    ],
